fixing mobile spacing issues and adding touch events

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -154,4 +154,13 @@ body {
     section.row {
         margin: 2rem 0;
     }
+    .mobile-column {
+        flex-direction: column;
+    }
+    .mobile-column .section-image {
+        display: block;
+    }
+    .hide-mobile {
+        display: none;
+    }
 }
